Refactor code for improved readability and consistency; trim whitespace and update ArrayList initializations